--- a/SimpleFeedReader/Pages/Index.cshtml
+++ b/SimpleFeedReader/Pages/Index.cshtml
@@ -10,7 +10,7 @@
         <form method="get">
             <div class="form-group">
                 <label>
-                    Enter a feed URL:
+                    Enter a feed URL (eg. http://rss.cnn.com/rss/edition.rss ):
                     <input name="FeedUrl" id="FeedUrl" class="form-control" value="@Request.Query["feedurl"]" />
                 </label>
             </div>
