--- a/SimpleFeedReader/Pages/_Layout.cshtml
+++ b/SimpleFeedReader/Pages/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SimpleFeedReader    xx</title>
+    <title>@ViewData["Title"] - SimpleFeedReader - Testing</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">SimpleFeedReader  x</a>
+                <a asp-page="/Index" class="navbar-brand">SimpleFeedReader  Testing This</a>
             </div>
         </div>
     </nav>
